All CoreRDD tests working up to 100M records